add starter folde

--- a/03-task-manager/starter/index.html
+++ b/03-task-manager/starter/index.html
@@ -17,27 +17,30 @@
   </head>
   <body>
     <form class="form task-form">
-      <h4>task manager</h4>
+      <h4>task mamager</h4>
       <div class="form-control">
-        <input type="text" name="name" class="form-input task-input" placeholder="e.g. wash dishes">
+        <input type="text"name="name" class="form-input task-input" placeholder="e.g. wash dishes">
         <button class="btn submit-btn">submit</button>
+
       </div>
       <small class="form-alert text-success">there was an error</small>
     </form>
     <section class="tasks-container">
-      <p class="loading-text">loading...</p>
+      <p class="loaing-text">loading...</p>
       <div class="task">
         <!-- single task -->
         <div class="single-task">
-          <h5><i class="far fa-check-circle"></i>
-          first task</h5>
+          <h5>
+            <i class="far fa-check-circle"></i>
+            first task
+          </h5>
           <div class="task-links">
             <!-- edit link -->
-            <a href="task.html" class="edit-link">
+            <a href="task.html"class="edit-link">
               <i class="fas fa-edit"></i>
             </a>
             <!-- delete link -->
-            <button type="button" class="delete-btn" data-id="123">
+            <button type="button"class="delete-btn"data-id="123">
               <i class="fas fa-trash"></i>
             </button>
           </div>
@@ -47,7 +50,7 @@
         <div class="single-task task-completed">
           <h5><i class="far fa-check-circle"></i>
           second task</h5>
-          <div class="task-links">
+          <div class="task-link">
             <!-- edit link -->
             <a href="task.html" class="edit-link">
               <i class="fas fa-edit"></i>
