--- a/04-reviews/starter/index.html
+++ b/04-reviews/starter/index.html
@@ -16,6 +16,34 @@
     <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
-   
+    <!-- https://res.cloudinary.com/diqqf3eq2/image/upload/v1586883334/person-1_rfzshl.jpg -->
+    <main>
+      <div class="container">
+    <!-- title -->
+    <div class="title">
+      <h2>our reviews</h2>
+      <div class="title-underline"></div>
+    </div>
+    <article class="review">
+      <div class="img-container">
+        <img src="https://res.cloudinary.com/diqqf3eq2/image/upload/v1586883334/person-1_rfzshl.jpg" class="img" id="person-img" alt="">
+      </div>
+      <h4 id="author">sara Jones</h4>
+      <p id="job">ux designer</p>
+      <p class="info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa cumque ut debitis, animi maiores dignissimos nostrum dolore at est quisquam.
+
+      </p>
+      <div class="button-container">
+        <button type="button" class="prev-btn">
+          <i class="fas fa-chevron-left"></i>
+        </button>
+        <button type="button" class="next-btn">
+          <i class="fas fa-chevron-right"></i>
+        </button>
+      </div>
+      <button class="btn random-btn">suprise me</button>
+    </article>
+  </div>
+</main>
   </body>
 </html>
