add stater folder from sidebar folder

--- a/06-sidebar/starter/index.html
+++ b/06-sidebar/starter/index.html
@@ -16,6 +16,54 @@
     <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
-    
+    <button class="sidebar-toggle">
+      <i class="fas fa-bars"></i>
+    </button>
+    <!-- sidebar -->
+    <aside class="sidebar">
+      <div class="sidebar-header">
+        <img src="./logo.svg" alt="coding addict" class="logo" />
+        <button class="close-btn" type="button">
+          <i class="fas fa-times"></i>
+        </button>
+      </div>
+      <!-- links -->
+      <ul class="links">
+        <li><a href="index.html">home</a></li>
+        <li><a href="about.html">about</a></li>
+        <li><a href="projects.html">project</a></li>
+        <li><a href=".contact">project</a></li>
+        <li><a href=".html">contact</a></li>
+      </ul>
+      <!-- social links -->
+      <ul class="social-icons">
+        <li>
+          <a href="https://www.twitter.com">
+            <i class="fab fa-facebook"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.twitter.com">
+            <i class="fab fa-twitter"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.twitter.com">
+            <i class="fab fa-behance"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.twitter.com">
+            <i class="fab fa-sketch"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.twitter.com">
+            <i class="fab fa-linkedin"></i>
+          </a>
+        </li>
+      </ul>
+    </aside>
+    <script src="./app.js "></script>
   </body>
 </html>
